<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="years">Years</string>
    <string name="pounds">Pounds</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculate">Calculate</string>
    <string name="normal">
    <![CDATA[<b><font fgcolor="#ff00ff00"> (Normal!) </font></b>]]>
    </string>
    <string name="nullval" />
</resources>
